[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.43.6",
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "openai>=2.36.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.4.2",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
